redirecting to netlify

--- a/404.html
+++ b/404.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0;url=https://rensatsu.netlify.com/" />
+    <noscript>
+        <meta http-equiv="refresh" content="0;url=https://rensatsu.netlify.com/" />
+    </noscript>
 </head>
 
 <body>
