redirecting to netlify, added link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
 <body>
     <p>Redirecting</p>
+    <p>
+        <a href="https://rensatsu.netlify.com/">Click here if nothing's happening</a>
+    </p>
+
     <script>
         location.replace(location.href.replace(location.host, "rensatsu.netlify.com"));
     </script>
