--- a/404.html
+++ b/404.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="utf-8" />
     <noscript>
-        <meta http-equiv="refresh" content="0;url=https://rensatsu.netlify.com/" />
+        <meta http-equiv="refresh" content="0;url=https://rensatsu.gitlab.io/" />
     </noscript>
 </head>
 
 <body>
     <p>Redirecting</p>
     <p>
-        <a href="https://rensatsu.netlify.com/">Click here if nothing's happening</a>
+        <a href="https://rensatsu.gitlab.io/">Click here if nothing's happening</a>
     </p>
 
     <script>
-        location.replace(location.href.replace(location.host, "rensatsu.netlify.com"));
+        location.replace(location.href.replace(location.host, "rensatsu.gitlab.io"));
     </script>
 </body>
 
